neo4j/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-api-deployment
  namespace: cjarcau
  labels:
    app: neo4j-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-api
  template:
    metadata:
      labels:
        app: neo4j-api
    spec:
      containers:
      - name: neo4j-api
        image: scr4pp/neo4j-api:arm23
        ports:
        - name: api
          containerPort: 8000
        imagePullPolicy: IfNotPresent
